# epistemic-graph-engine

./: .gitattributes  .gitignore  CONTRACT_002_VERIFIED.md  CONTRACT_003_IMPLEMENTATION_SPEC.md  CONTRACT_004_IMPLEMENTATION_SPEC.md  CONTRACT_005_IMPLEMENTATION_SPEC.md  CONTRACT_005_VERIFIED.md  IMPLEMENTATION_NOTE.md  README.md  pyproject.toml
Docs/: CONTRACT_001_VERIFIED.md  CONTRACT_003_IMPLEMENTATION_SPEC.md  CONTRACT_003_VERIFIED.md  CONTRACT_004_VERIFIED.md  CONTRACT_005_IMPLEMENTATION_SPEC.md  Contract 001 - Epistemic Graph v0.md  Contract 002 - Claim Layer V1.md  Contract 003 - Evidence Resolution.md  Contract 004 - Timeline & Contract Res.md  Contract 005 - Deterministic Publishing.md  Contract 005 — Deterministic Publishing.md  RUN_STEPS.md
epistemic_graph/: __init__.py  hash_utils.py  ingest.py  schemas.py
epistemic_graph/claims/: __init__.py  bounties.py  builder.py  graph.py  lifecycle.py  query.py  schema.py  serialization.py
epistemic_graph/publish/: __init__.py  (+5 more)
profiles/: audit.json  claim.json  executive.json  research.json  timeline.json
scripts/: generate_fixture.py
tests/: conftest.py  test_claim_builder.py  test_claim_graph.py  test_claim_immutability.py  test_claim_lifecycle.py  test_claim_query.py  test_claim_regeneration.py  test_claim_schema.py  test_ingestion.py  test_publish_determinism.py  test_publish_packager.py  test_publish_profiles.py  test_publish_verifier.py  test_resolution_engine.py  test_resolution_planner.py  test_resolution_regeneration.py  test_resolution_safety.py  test_timeline.py  test_timeline_regeneration.py
(+12 files in other folders)
