[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-graph-engine"
version = "0.1.0"
description = "Deterministic ingestion foundation for Epistemic Graph v0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2,<3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

